apart price + h5 overflow fix

--- a/css/plan.css
+++ b/css/plan.css
@@ -73,7 +73,7 @@ body {
     color: var(--clr-lot-handle);
     margin: 2rem 0 1rem 0;
     text-transform: uppercase;
-    text-wrap: nowrap;
+    white-space: nowrap;
 }
 
 .apartament-left-item > div:nth-of-type(2) {
@@ -203,7 +203,7 @@ body {
 }
 
 .apartament-left-item > div:nth-of-type(6) span {
-    font-size: clamp(0.875rem, 0.7143rem + 0.3571vw, 1rem);
+    font-size: clamp(0.75rem, 0.1579rem + 1.0526vw, 1rem);
 }
 
 .apartament-left-item > div:nth-of-type(5) img, .apartament-left-item > div:nth-of-type(6) img {
